--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "jantinnerezo/livewire-alert": "^4.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.6"
+        "livewire/livewire": "^3.6",
+        "rappasoft/laravel-livewire-tables": "^3.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -24,6 +25,9 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Domains\\": "domains/",
+            "Src\\": "src/",
+            "Frontend\\": "frontend/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
